--- a/.github/workflows/mirror_murcia.yml
+++ b/.github/workflows/mirror_murcia.yml
@@ -3,13 +3,16 @@ name: Mirror @ Murcia Organization
 on: [push, delete]
 
 jobs:
-  mirror:
-    runs-on: ubuntu-18.04
+  repo-sync:
+    runs-on: ubuntu-latest
     steps:
-    - name: mirror
-      uses: wearerequired/git-mirror-action@master
+    - name: repo-sync
+      uses: wei/git-sync@v1
       env:
+        SOURCE_REPO: "git@github.com:weso/shex-lite.git"
+        SOURCE_BRANCH: "master"
+        DESTINATION_REPO: "git@github.com:HerculesCRUE/ib-shex-lite.git"
+        DESTINATION_BRANCH: "master"
         SSH_PRIVATE_KEY: ${{ secrets.IZERTIS_GITHUB_SSH_KEY }}
       with:
-        source-repo: 'git@github.com:weso/shex-lite.git'
-        destination-repo: 'git@github.com:HerculesCRUE/ib-shex-lite.git'
+        args: $SOURCE_REPO $SOURCE_BRANCH $DESTINATION_REPO $DESTINATION_BRANCH
