--- a/.github/workflows/mirror_murcia.yml
+++ b/.github/workflows/mirror_murcia.yml
@@ -1,6 +1,12 @@
 name: Mirror @ Murcia Organization
 
-on: [push, delete]
+on:
+  push:
+    branches:
+      master
+  delete:
+    branches:
+      master
 
 jobs:
   repo-sync:
