--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,25 @@
-sudo: true
+sudo: false
+language: python
+python:
+  - "2.7"
 
+install:
+  - pushd /tmp
+  - git clone https://github.com/tabatkins/bikeshed.git --depth 1
+  - pip install --editable bikeshed
+  - bikeshed update
+  - popd
 
-matrix:
-  - language: scala
-    scala: 2.13.1
-    jdk:
-      - oraclejdk12
-      - openjdk12
-      
-  - language: pyhon
-    python: 2.7
-     
-    install:
-      - pushd /tmp
-      - git clone https://github.com/tabatkins/bikeshed.git --depth 1
-      - sudo pip install --editable bikeshed
-      - bikeshed update
-      - popd
-      
-    script:
-      - ./scripts/build-doc
-       
-    before_deploy:
-      - rm .gitignore
+script:
+  - .scripts/build-doc
 
-     deploy:
-       provider: pages
-       skip_cleanup: true
-       github_token: $GITHUB_TOKEN
-       keep_history: true
-       on:
-         branch: master
+before_deploy:
+  - rm .gitignore
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  keep_history: true
+  on:
+    branch: master
