--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,15 @@ before_deploy:
 
 deploy:
   provider: pages
-  cleanup: false
+  skip_cleanup: true
   github_token: $GITHUB_TOKEN
   keep_history: true
+  local_dir: ./doc
+  commiter_from_gh: true
   on:
     branch:
-      shex-lite-2.0-dev
+      shex-lite-2.0-docs
+
+branches:
+  except:
+    - gh-pages
