Set weso-bot config

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,11 @@ deploy:
   keep_history: true
   local_dir: ./doc
   commiter_from_gh: true
+  name: weso-bot
+  email: thewilly.work@gmail.com
   on:
     branch:
-      shex-lite-2.0-docs
+      shex-lite-2.0-dev
 
 branches:
   except:
