Shex lite 2.0 docs (#17)
* Update deployment script

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,14 @@ deploy:
   cleanup: false
   github_token: $GITHUB_TOKEN
   keep_history: true
+  local_dir: ./doc
+  commiter_from_gh: true
+  name: weso-bot
+  email: thewilly.work@gmail.com
   on:
     branch:
       shex-lite-2.0-dev
+
+branches:
+  except:
+    - gh-pages
