--- a/.github/workflows/mirror_murcia.yml
+++ b/.github/workflows/mirror_murcia.yml
@@ -14,6 +14,7 @@ jobs:
     steps:
     - name: repo-sync
       run: ./scripts/git_sync.sh
+      working-directory: .
       env:
         SOURCE_REPO: "git@github.com:weso/shex-lite.git"
         SOURCE_BRANCH: "master"
