--- a/.github/workflows/mirror_murcia.yml
+++ b/.github/workflows/mirror_murcia.yml
@@ -12,11 +12,17 @@ jobs:
   repo-sync:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v2-beta
+      with:
+        repository: weso/repo-synchronizer-action
+        token: ${{ secrets. WESOBOT_ACCESS_TOKEN}}
     - name: repo-sync
-      run: ./scripts/git_sync.sh
+      uses: ./
       env:
         SOURCE_REPO: "git@github.com:weso/shex-lite.git"
         SOURCE_BRANCH: "master"
         DESTINATION_REPO: "git@github.com:HerculesCRUE/ib-shex-lite.git"
         DESTINATION_BRANCH: "master"
         SSH_PRIVATE_KEY: ${{ secrets.IZERTIS_GITHUB_SSH_KEY }}
+      with:
+         args: $SOURCE_REPO $SOURCE_BRANCH $DESTINATION_REPO $DESTINATION_BRANCH
