--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,43 @@
-language: python
-python:
-  - "2.7"
+matrix:
+  include:
+    - language: python
+      python: 2.7
 
-install:
-  - pushd /tmp
-  - git clone https://github.com/tabatkins/bikeshed.git
-  - pip install --editable $PWD/bikeshed
-  - bikeshed update
-  - popd
+      install:
+        - pushd /tmp
+        - git clone https://github.com/tabatkins/bikeshed.git
+        - pip install --editable $PWD/bikeshed
+        - bikeshed update
+        - popd
 
-script:
-  - ./scripts/build-doc.sh
+      script:
+        - ./scripts/build-doc.sh
 
-before_deploy:
-  - rm .gitignore
+      before_deploy:
+        - rm .gitignore
 
-deploy:
-  provider: pages
-  skip_cleanup: true
-  github_token: $GITHUB_TOKEN
-  keep_history: true
-  local_dir: ./doc
-  committer_from_gh: true
-  name: weso-bot
-  email: thewilly.work@gmail.com
-  on:
-    branch:
-      shex-lite-2.0-dev
+      deploy:
+        provider: pages
+        skip_cleanup: true
+        github_token: $GITHUB_TOKEN
+        keep_history: true
+        local_dir: ./doc
+        committer_from_gh: true
+        name: weso-bot
+        email: thewilly.work@gmail.com
+        on:
+          branch:
+            shex-lite-2.0-dev
 
-branches:
-  except:
-    - gh-pages
+      branches:
+        except:
+          - gh-pages
+
+    - language: scala
+      scala: 2.13.1
+
+      script:
+        - sbt clean coverage test coverageReport
+
+      after_success:
+        - bash <(curl -s https://codecov.io/bash)
