--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ matrix:
       scala: 2.13.1
 
       script:
-        - sbt clean coverage test coverageReport
+        - sbt -Djava.specification.version=9.1 clean coverage test coverageReport
 
       after_success:
         - bash <(curl -s https://codecov.io/bash)
