--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ matrix:
 
     - language: scala
       scala: 2.13.1
-      jdk: oraclejdk8
+      jdk: openjdk8
       sudo: false
 
       script:
