Make project cross compatible with scala 2.12.10 and 2.13.1

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,12 +34,19 @@ matrix:
           - gh-pages
 
     - language: scala
-      scala: 2.13.1
+      scala:
+        - 2.13.1
+        - 2.12.10
       jdk: openjdk8
       sudo: false
 
       script:
-        - sbt clean coverage test coverageReport
+        - if [[ "$TRAVIS_SCALA_VERSION" == 2.12.* ]];
+          then
+            sbt ++$TRAVIS_SCALA_VERSION  clean coverage test coverageReport && bash <(curl -s https://codecov.io/bash);
+          else
+            sbt ++$TRAVIS_SCALA_VERSION  clean test && echo "Skipping code coverage reporting and docs on 2.13";
+          fi
 
       after_success:
         - bash <(curl -s https://codecov.io/bash)
