--- a/.github/workflows/shex-lite-ci.yml
+++ b/.github/workflows/shex-lite-ci.yml
@@ -58,5 +58,7 @@ jobs:
       with:
         java-version: 12
         architecture: x64
+    - name: Install sbt
+      run: brew install sbt
     - name: Run tests
       run: sbt ++2.13.1! clean test
