--- a/.github/workflows/shex-lite-ci.yml
+++ b/.github/workflows/shex-lite-ci.yml
@@ -1,6 +1,18 @@
 name: ShEx-Lite CI
 
-on: [push, pull_request]
+on:
+  # On pushes will ignore all doc files and all markdown files.
+  push:
+    paths-ignore: 
+      - '**.md'
+      - 'doc/**'
+  
+  # On pull requests will ignore all doc files and all markdown files.
+  pull_request:
+    paths-ignore: 
+      - '**.md'
+      - 'doc/**'
+  
 
 jobs:
   
