--- a/project/.scalafmt.conf
+++ b/project/.scalafmt.conf
@@ -3,7 +3,7 @@
 // All Scala files should be reformatted through this formatter before being
 // committed to the repositories.
 
-version = "2.4.2"
+version = "2.5.2"
 
 // Wrapping and Alignment
 align = most
@@ -27,8 +27,9 @@ align.tokens = [
   {code = ":", owner = "Defn.Def"}
   {code = ":", owner = "Decl.Def"}
 ]
-maxColumn = 80
+maxColumn = 100
 verticalAlignMultilineOperators = true
+newlines.source = fold
 
 // Comments and Documentation
 docstrings = "scaladoc"
@@ -46,12 +47,12 @@ newlines.penalizeSingleSelectMultiArgList = true
 newlines.alwaysBeforeCurlyBraceLambdaParams = false
 newlines.alwaysBeforeTopLevelStatements = false
 newlines.afterCurlyLambda = never
-newlines.afterImplicitKWInVerticalMultiline = false
-newlines.beforeImplicitKWInVerticalMultiline = false
+// newlines.afterImplicitKWInVerticalMultiline = false
+// newlines.beforeImplicitKWInVerticalMultiline = false
 newlines.alwaysBeforeElseAfterCurlyIf = false
 newlines.avoidAfterYield = true
-verticalMultilineAtDefinitionSite = false
-verticalMultilineAtDefinitionSiteArityThreshold = 100
+// verticalMultilineAtDefinitionSite = false
+// verticalMultilineAtDefinitionSiteArityThreshold = 100
 verticalMultiline.atDefnSite = false
 verticalMultiline.arityThreshold = 100
 verticalMultiline.newlineBeforeImplicitKW = false
